tests/valid/nested-functions.nyx
fn outer():
    fn inner():
        pass
