tests/invalid/deeply-nested-inconsistent.nyx
fn outer() -> ok:
    fn middle() -> ok:
        let x = 1
       let y = 2
        fn inner() -> ok:
            pass
        pass
    pass
